syntax = "proto3";
option java_multiple_files = true;

package sdmxdl.format.protobuf.web;

import "sdmxdl_api.proto";

message WebSource {
  string id = 1;
  map<string, string> names = 2;
  string driver = 3;
  string endpoint = 4;
  map<string, string> properties = 5;
  repeated string aliases = 6;
  optional string website = 7;
  optional string monitor = 8;
  optional string monitor_website = 9;
  Confidentiality confidentiality = 10;
}

message WebSources {
  repeated WebSource web_sources = 1;
}

enum MonitorStatus {
  UNKNOWN = 0;
  UP = 1;
  DOWN = 2;
}

message MonitorReport {
  string source = 1;
  MonitorStatus status = 2;
  optional double uptime_ratio = 3;
  optional int64 average_response_time = 4;
}

message MonitorReports {
  string uri_scheme = 1;
  repeated MonitorReport reports = 2;
  string creation_time = 3;
  string expiration_time = 4;
}

message SourceRequest {
  string source = 1;
  optional string languages = 2;
}

message DatabaseRequest {
  string source = 1;
  optional string database = 2;
  optional string languages = 3;
}

message FlowRequest {
  string source = 1;
  string flow = 2;
  optional string database = 3;
  optional string languages = 4;
}

message KeyRequest {
  string source = 1;
  string flow = 2;
  string key = 3;
  optional string database = 4;
  optional string languages = 5;
}
